# pancake

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  bootstrap  configure.ac  pancake.pc.in  pancakerc
lib/: Makefile.am  pc_misc.c  pc_misc.h  pc_module.h  pc_optionconv.c  pc_style.c  pc_style.h  pc_types.h
modules/: Makefile.am
modules/clock/: Makefile.am  pc_clock.c
modules/defaulttheme/: Makefile.am  pc_defaulttheme.c
modules/pager/: Makefile.am  pc_pager.c
modules/tasklist/: Makefile.am  pc_task.c  pc_task.h  pc_tasklist.c
modules/trayarea/: Makefile.am  pc_trayarea.c
modules/workspacename/: Makefile.am  pc_workspacename.c
projectpage/: index.html
src/: Makefile.am  commandline.c  commandline.h  configparser.c  configparser.h  main.c  misc.h  modloader.c  modloader.h  module.h  optionconv.c  optionconv.h  pancakerc  panel.c  panel.h  pc_commandline.c  pc_commandline.h  pc_configparser.c  pc_configparser.h  pc_misc.h  pc_modloader.c  pc_modloader.h  pc_module.h  pc_optionconv.h  pc_panel.c  pc_panel.h  pc_sighandler.c  pc_sighandler.h  pc_style.c  pc_style.h  pc_types.h  sighandler.c  sighandler.h  types.h
